feat(extension): add env variable masking with toggle command

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
       {
         "command": "veil.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "veil.toggle",
+        "title": "Veil: Toggle Masking"
       }
     ]
   },
