chore(env): add redis and auth variables to example config

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=postgres
+REDIS_URL=redis://localhost:6379
+
+AUTH_SECRET="your_auth_secret"
+AWS_SECRET_KEY="[ENCRYPTION_KEY]"
+ADMIN_PASSWORD=supersecret_admin
