--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
 		"watch": "npm-run-all -p watch:*",
 		"watch:esbuild": "node esbuild.js --watch",
 		"watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-		"package": "pnpm run check-types && pnpm run lint && node esbuild.js --production",
+		"package": "pnpm run typecheck && pnpm run lint && node esbuild.js --production",
 		"compile-tests": "tsc -p . --outDir out",
 		"watch-tests": "tsc -p . -w --outDir out",
 		"pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
-		"check-types": "tsc --noEmit",
+		"typecheck": "tsc --noEmit",
 		"lint": "eslint src",
 		"format": "prettier --write .",
 		"test": "vscode-test"
