--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,10 +10,6 @@ on:
 
 jobs:
   test:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -31,12 +27,5 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Run Tests (Linux)
-        if: runner.os == 'Linux'
-        uses: GabrielBB/xvfb-action@v1
-        with:
-          run: pnpm test
-
-      - name: Run Tests (macOS/Windows)
-        if: runner.os != 'Linux'
+      - name: Run Tests
         run: pnpm test
