--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,14 +1,19 @@
-.vscode/**
-.vscode-test/**
-out/**
-node_modules/**
-src/**
+.vscode/
+.vscode-test/
+.github/
+node_modules/
+src/
 .gitignore
-.yarnrc
+.prettierignore
+.env.example
+AGENTS.md
+CLAUDE.md
 esbuild.js
+eslint.config.mjs
+package-lock.json
+pnpm-lock.yaml
+pnpm-workspace.yaml
+tsconfig.json
 vsc-extension-quickstart.md
-**/tsconfig.json
-**/eslint.config.mjs
 **/*.map
 **/*.ts
-**/.vscode-test.*
