feat(extension): add extension icon and update vscode ignore

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"displayName": "dotveil",
 	"description": "Hide sensitive values in .env files and other config files",
 	"version": "0.0.1",
+	"icon": "dotveil.png",
 	"publisher": "ragnarokreinier",
 	"license": "GPL-3.0",
 	"repository": {
