--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,11 +5,10 @@ on:
     branches:
       - main
   pull_request:
-    branches:
-      - main
 
 jobs:
   test:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -17,7 +16,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: 24
+          node-version: lts/*
 
       - name: Install pnpm
         uses: pnpm/action-setup@v3
@@ -28,4 +27,6 @@ jobs:
         run: pnpm install
 
       - name: Run Tests
-        run: pnpm test
+        uses: GabrielBB/xvfb-action@v1
+        with:
+          run: npm test
