--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
 		"type": "git",
 		"url": "https://github.com/ragnarok22/vscode-veil-dotenv"
 	},
+	"bugs": {
+		"url": "https://github.com/ragnarok22/vscode-veil-dotenv/issues"
+	},
+	"homepage": "https://github.com/ragnarok22/vscode-veil-dotenv#readme",
 	"engines": {
 		"vscode": "^1.104.0"
 	},
