--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"url": "https://github.com/ragnarok22/vscode-veil-dotenv/issues"
 	},
 	"homepage": "https://github.com/ragnarok22/vscode-veil-dotenv#readme",
+	"vsce": {
+		"dependencies": false
+	},
 	"engines": {
 		"vscode": "^1.104.0"
 	},
