--- a/package.json
+++ b/package.json
@@ -61,18 +61,18 @@
 	},
 	"devDependencies": {
 		"@types/mocha": "^10.0.10",
-		"@types/node": "22.x",
-		"@types/vscode": "^1.104.0",
+		"@types/node": "~25.2.1",
+		"@types/vscode": "^1.109.0",
 		"@vscode/test-cli": "^0.0.12",
 		"@vscode/test-electron": "^2.5.2",
-		"esbuild": "^0.27.2",
+		"esbuild": "^0.27.3",
 		"eslint": "^9.39.2",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-prettier": "^5.5.5",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.8.1",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.52.0"
+		"typescript-eslint": "^8.54.0"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
