--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
 		"Other"
 	],
 	"keywords": [
-		"dotveil",
 		"veil",
 		"security",
 		"masking",
 		"secrets",
 		"dotenv",
-		"env"
+		"env",
+		"hide"
 	],
 	"activationEvents": [
 		"onStartupFinished"
